# btrader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEPLOYMENT_GUIDE.md  ERROR_FIXED.md  FINAL_PROJECT_STATUS.md  FINAL_SOLUTION.md  ISSUES_FIXED.md  NODEJS_UPGRADE_GUIDE.md  NPM_ELECTRON_UPDATE_GUIDE.md  ORDERFLOW_WINDOW_USAGE.md  PROBLEM_SOLVED.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_GUIDE.md  QUICK_UPDATE_CHEATSHEET.md  README.md  mac-orb-setup.md
algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h
archive/: pub_clock.cpp  pub_clock.h
bot/: price_notice_bot.py  price_notice_bot_conf.tpl.json  readme.md
broker/: CMakeLists.txt  backtest_data.cpp  backtest_data.h  binance_broker.cpp  binance_broker.h  binance_data.cpp  binance_data.h  data_service.cpp  data_service.h  trade_service.cpp  trade_service.h
broker/archive/: xtpconvert.h  xtpdata.cpp  xtpdata.h  xtptrader.cpp  xtptrader.h
broker/backtest/: CMakeLists.txt  backtest_broker.cpp  backtest_broker.h  backtest_csvdata.cpp  backtest_csvdata.h  backtest_data.cpp
broker/binance/: CMakeLists.txt  binance_broker.cpp  binance_broker.h  binance_data.cpp  binance_data.h
broker/brokersim/: CMakeLists.txt  brokersim.cpp  brokersim.h
broker/filedataservice/: CMakeLists.txt  filedataservice.cpp  filedataservice.h
broker/pyservice/: CMakeLists.txt  pydata_service.cpp  pydata_service.h  pytrade_service.cpp  pytrade_service.h
cmake/: compile.cmake  compile_option.cmake  compile_standard.cmake  macro.cmake  thirdparty.cmake
config-tpl/: backtest.json  brokersim.json  gui.json  standard.tpl.json
core/: CMakeLists.txt  book.cpp  book.h  constants.h  corecomm.cpp  corecomm.h  enums.h  event.h  eventengine.cpp  eventengine.h  exceptions.h  ext_scheduler.cpp  ext_scheduler.h  fds_map.cpp  fds_map.h  fds_map_fixing.cpp  globalparams.h  hashid.h  ijournal_comm.h  journal_comm_data.cpp  journal_comm_data.h  journal_pack.cpp  journal_pack.h  main_cfg.cpp  main_cfg.h  main_cfg.json  main_cfg.tpl.json  main_cfg_template.json  nanomsg.h  net_device.cpp  net_device.h  observe_helper.cpp  observe_helper.h  positionbook.cpp  positionbook.h  requestbook.cpp  requestbook.h  types.cpp  types.h  uid_util.h  (+1 more)
core/journal/: frame.h  jid.h  jlocation.cpp  jlocation.h  journal.cpp  journal.h  page.cpp  page.h  reader.cpp  reader.h  writer.cpp  writer.h
cp/: CMakeLists.txt  backtest_dump.cpp  backtest_dump.h  backtest_subscriber.cpp  backtest_subscriber.h  cp_engine.cpp  cp_engine.h  live_subscriber.cpp  live_subscriber.h  strategy_invoke.h
engines/: CMakeLists.txt
extension/: CMakeLists.txt  depthcallboard.cpp  depthcallboard.h  globalparams.h
infra/: BiMemIPC.cpp  BiMemIPC.hpp  CMakeLists.txt  MemIPC.cpp  MemIPC.hpp  array.h  bimem_ipc.cpp  bimem_ipc.hpp  callback.h  common.h  csv.cpp  csv.h  dlhelper.cpp  dlhelper.h  epoll_usage.c  epoll_usage.h  ext_type_traits.h  format.cpp  format.h  hash.cpp  hash.h  infra.h  json.h  log.cpp  log.h  mem_ipc.cpp  mem_ipc.hpp  mmap.cpp  mmap.h  no_copy.h  semaphore.cpp  semaphore.h  signalhandler.cpp  signalhandler.h  singleton.h  socket.cpp  socket.h  time.cpp  time.h  websocket.cpp  (+3 more)
infra/crypto/: base64.c  base64.h  ed25519.c  ed25519.h  signer.cpp  signer.h
infra/tests/: MemIPCTest.cpp
infra/web/: httpclient.cpp  httpclient.h
main/: CMakeLists.txt  global_state.h  main.cpp  main.sh  md_use.cpp  md_use.h  mentor.cpp  mentor.h  mentor_run.cpp  mentor_send_eventfd.cpp  option_parser.cpp  option_parser.h
md/: CMakeLists.txt  md_engine.cpp  md_engine.h
pylib/: CMakeLists.txt  gen_stub.sh  py_journal.cpp  py_journal.h  pybtrader.cpp
strategies/: CMakeLists.txt  consecutive_bar_strategy.cpp  consecutive_bar_strategy.h  my_strategy.cpp
strategy/: CMakeLists.txt  backtest_executor.cpp  backtest_executor.h  dummy_strategy.h  executor.cpp  executor.h  executor_factory.cpp  live_executor.cpp  live_executor.h  strategy.h
td/: CMakeLists.txt  td_engine.cpp  td_engine.h
tests/: CMakeLists.txt  binance_test.cpp  binance_trade_demo.py  crypto_signer_test.cpp  ed25519_test.c  http_test.cpp  journal_comm_test.cpp  journal_epoll_test.cpp  spdlog_demo.cpp  time_test.cpp  websocket_client_test.cpp  websocket_server_test.cpp
tests/eventfd-ipc/: client.c  makefile  server.c
tradeview/: CMakeLists.txt  FINAL_SOLUTION.md  Interactive-between-cpp-and-qml.md  README.md  backplot.ipynb  guiconfig.json  instruments.json  main.cpp  readme.md  resources.qrc  run_app_final.sh  run_tradeview.sh  test_app.py
tradeview/client/: package.json
tradeview/client/src/: App.css  App.js
tradeview/control/: CMakeLists.txt  application.cpp  application.h  configmanager.cpp  configmanager.h  coreagent.cpp  coreagent.h  datamanager.cpp  datamanager.h  main.cpp  order_manager.cpp  order_manager.h  uimanager.cpp  uimanager.h  workthread.cpp  workthread.h
tradeview/cpp/: binding.gyp
tradeview/cpp/src/: binding.cpp  engine.cpp  engine.h
tradeview/guidb/: CMakeLists.txt  database.cpp  database.h  dbmgr.h  guitime.cpp  guitime.h  kline.h  klineset.cpp  klineset.h  orderbookset.cpp  orderbookset.h  resource.h  ticktradebook.h
tradeview/model/: CMakeLists.txt  README.md  candlestickmodel.cpp  candlestickmodel.h  footprintmodel.cpp  footprintmodel.h  microorderbookmodel.cpp  microorderbookmodel.h  modelmgr.cpp  modelmgr.h  order.cpp  order.h  orderbookmodel.cpp  orderbookmodel.h  ticktrademodel.cpp  ticktrademodel.h
tradeview/qml/: CMakeLists.txt  DynamicWindowExample.qml  OrderForm.qml  OrderView.qml  README.md  main.qml  qml.qrc
tradeview/qml/components/: ChartToolbar.qml  DataPanel.qml  DataTable.qml  FootprintChart.qml  NavigationBar.qml  StatusBar.qml
tradeview/qml/pages/: CandlestickPage.qml  FootprintPage.qml  MicroOrderBookPage.qml  OrderBookPage.qml  OrderFlowPage.qml  SettingsPage.qml  TickTradePage.qml
tradeview/qml/windows/: OrderBookWindow.qml  OrderFlowWindow.qml  TickTradeWindow.qml
tradeview/server/: package.json  server.js
ui/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  README.md  electron.vite.config.ts  package-lock.json  (+13 more)
(+38 files in other folders)
